hphp/hack/test/typecheck/new_inference/nothing/null_check.php.legacy.exp
File "null_check.php", line 4, characters 25-31:
Unbound name: nothing (an object type) (Naming[2049])
